--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "appinsights",
     "statsd"
   ],
-  "author": "Luke Kim <luke.kim@microsoft.com>",
+  "author": "",
   "license": "MIT",
   "files": [
     "LICENSE",
