--- a/package.json
+++ b/package.json
@@ -24,23 +24,9 @@
   "files": [
     "LICENSE",
     "README.md",
-    "lib/"
+    "lib/appinsights.js"
   ],
   "dependencies": {
     "applicationinsights": "1.8.2"
-  },
-  "devDependencies": {
-    "assert": "1.3.0",
-    "gulp": "3.9.1",
-    "gulp-istanbul": "0.10.4",
-    "gulp-mocha": "2.2.0",
-    "gulp-sloc": "^1.0.4",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-tslint": "5.0.0",
-    "gulp-typescript": "2.13.4",
-    "run-sequence": "1.1.5",
-    "sinon": "1.17.4",
-    "tslint": "3.10.1",
-    "typescript": "1.8.10"
   }
 }
